--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -80,6 +80,7 @@
             android:id="@+id/EstudianteTextView"
             android:layout_width="0dp"
             android:gravity="center"
+            android:textStyle="bold"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             android:layout_marginTop="90dp"
