--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,13 +14,6 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:popupTheme="@style/AppTheme.PopupOverlay" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
@@ -29,65 +22,70 @@
 
         <Button
             android:id="@+id/horarioButton"
-            android:layout_width="110dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="17dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginBottom="50dp"
             android:text="@string/horarioButton"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/button8" />
+            app:layout_constraintEnd_toStartOf="@+id/NotasButton"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/CalendarioButton"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <Button
-            android:id="@+id/button8"
-            android:layout_width="110dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="17dp"
+            android:id="@+id/CalendarioButton"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginBottom="50dp"
             android:text="@string/calendarioButton"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintEnd_toStartOf="@+id/horarioButton"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <Button
             android:id="@+id/NotasButton"
-            android:layout_width="110dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="17dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginBottom="50dp"
             android:text="@string/notasButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.096"
-            app:layout_constraintStart_toEndOf="@+id/horarioButton" />
+            app:layout_constraintStart_toEndOf="@+id/horarioButton"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="141dp"
             android:layout_marginTop="200dp"
-            android:layout_marginEnd="142dp"
-            android:layout_marginBottom="126dp"
+            android:layout_marginBottom="320dp"
             android:contentDescription="@string/todoText"
-            app:layout_constraintBottom_toTopOf="@+id/horarioButton"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
             tools:srcCompat="@tools:sample/avatars[0]" />
 
         <TextView
             android:id="@+id/EstudianteTextView"
-            android:layout_width="0dp"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:layout_height="wrap_content"
+            android:layout_width="283dp"
+            android:layout_height="59dp"
             android:layout_marginStart="50dp"
             android:layout_marginTop="90dp"
             android:layout_marginEnd="50dp"
             android:layout_marginBottom="92dp"
+            android:autoSizeTextType="uniform"
+            android:gravity="center"
             android:text="@string/estudianteText"
             android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
