--- a/app/src/main/res/layout/content_notas_screen.xml
+++ b/app/src/main/res/layout/content_notas_screen.xml
@@ -6,50 +6,4 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".NotasScreen"
-    tools:showIn="@layout/activity_notas_screen">
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="150dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="147dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="114dp"
-        android:layout_marginBottom="60dp"
-        android:text="@string/SecondPeriodButton"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/firstPeriodButton" />
-
-    <Button
-        android:id="@+id/firstPeriodButton"
-        android:layout_width="150dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="147dp"
-        android:layout_marginTop="90dp"
-        android:layout_marginEnd="114dp"
-        android:layout_marginBottom="41dp"
-        android:text="@string/FirstPeriodButton"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="150dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="147dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="114dp"
-        android:layout_marginBottom="161dp"
-        android:text="@string/totalButton"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:showIn="@layout/activity_notas_screen"/>
